--- a/app/src/main/res/layout/appbar_home.xml
+++ b/app/src/main/res/layout/appbar_home.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="60dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
+    app:layout_scrollFlags="scroll|enterAlways"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
@@ -18,6 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin"
         android:textSize="24sp"
-        android:text="My Fake Netflix"/>
+        android:text="Only on Netflix"/>
 
 </LinearLayout>
